// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`company 1`] = `
<div>
  <div>
    <input
      onClick={[Function]}
      type="button"
      value="Velcom"
    />
    <input
      onClick={[Function]}
      type="button"
      value="MTC"
    />
    <h2>
      Компания: 
      Velcom
    </h2>
  </div>
  <div
    className="filter"
  >
    <input
      onClick={[Function]}
      type="button"
      value="Все"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Активные"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Заблокированные"
    />
  </div>
  <div>
    <table>
      <tbody>
        <tr>
          <th>
            Фамилия
          </th>
          <th>
            Имя
          </th>
          <th>
            Отчество
          </th>
          <th>
            Баланс
          </th>
          <th>
            Статус
          </th>
          <th>
            Редактировать
          </th>
          <th>
            Удалить
          </th>
        </tr>
        <tr>
          <td>
            Иванов
          </td>
          <td>
            Иван
          </td>
          <td>
            Иванович
          </td>
          <td>
            200
          </td>
          <td
            style={
              Object {
                "backgroundColor": "green",
              }
            }
          >
            active
          </td>
          <td>
            <input
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td>
            <input
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
        <tr>
          <td>
            Сидоров
          </td>
          <td>
            Сидор
          </td>
          <td>
            Сидорович
          </td>
          <td>
            250
          </td>
          <td
            style={
              Object {
                "backgroundColor": "green",
              }
            }
          >
            active
          </td>
          <td>
            <input
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td>
            <input
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
        <tr>
          <td>
            Петров
          </td>
          <td>
            Петр
          </td>
          <td>
            Петрович
          </td>
          <td>
            180
          </td>
          <td
            style={
              Object {
                "backgroundColor": "green",
              }
            }
          >
            active
          </td>
          <td>
            <input
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td>
            <input
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
        <tr>
          <td>
            Григорьев
          </td>
          <td>
            Григорий
          </td>
          <td>
            Григорьевич
          </td>
          <td>
            -220
          </td>
          <td
            style={
              Object {
                "backgroundColor": "red",
              }
            }
          >
            blocked
          </td>
          <td>
            <input
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td>
            <input
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <input
    onClick={[Function]}
    type="button"
    value="Добавить"
  />
  <div />
</div>
`;

exports[`company 2`] = `
<div>
  <div>
    <input
      onClick={[Function]}
      type="button"
      value="Velcom"
    />
    <input
      onClick={[Function]}
      type="button"
      value="MTC"
    />
    <h2>
      Компания: 
      Velcom
    </h2>
  </div>
  <div
    className="filter"
  >
    <input
      onClick={[Function]}
      type="button"
      value="Все"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Активные"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Заблокированные"
    />
  </div>
  <div>
    <table>
      <tbody>
        <tr>
          <th>
            Фамилия
          </th>
          <th>
            Имя
          </th>
          <th>
            Отчество
          </th>
          <th>
            Баланс
          </th>
          <th>
            Статус
          </th>
          <th>
            Редактировать
          </th>
          <th>
            Удалить
          </th>
        </tr>
        <tr>
          <td>
            Иванов
          </td>
          <td>
            Иван
          </td>
          <td>
            Иванович
          </td>
          <td>
            200
          </td>
          <td
            style={
              Object {
                "backgroundColor": "green",
              }
            }
          >
            active
          </td>
          <td>
            <input
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td>
            <input
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
        <tr>
          <td>
            Сидоров
          </td>
          <td>
            Сидор
          </td>
          <td>
            Сидорович
          </td>
          <td>
            250
          </td>
          <td
            style={
              Object {
                "backgroundColor": "green",
              }
            }
          >
            active
          </td>
          <td>
            <input
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td>
            <input
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
        <tr>
          <td>
            Петров
          </td>
          <td>
            Петр
          </td>
          <td>
            Петрович
          </td>
          <td>
            180
          </td>
          <td
            style={
              Object {
                "backgroundColor": "green",
              }
            }
          >
            active
          </td>
          <td>
            <input
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td>
            <input
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
        <tr>
          <td>
            Григорьев
          </td>
          <td>
            Григорий
          </td>
          <td>
            Григорьевич
          </td>
          <td>
            -220
          </td>
          <td
            style={
              Object {
                "backgroundColor": "red",
              }
            }
          >
            blocked
          </td>
          <td>
            <input
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td>
            <input
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <input
    onClick={[Function]}
    type="button"
    value="Добавить"
  />
  <div />
</div>
`;

exports[`company 3`] = `
<div>
  <div>
    <input
      onClick={[Function]}
      type="button"
      value="Velcom"
    />
    <input
      onClick={[Function]}
      type="button"
      value="MTC"
    />
    <h2>
      Компания: 
      Velcom
    </h2>
  </div>
  <div
    className="filter"
  >
    <input
      onClick={[Function]}
      type="button"
      value="Все"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Активные"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Заблокированные"
    />
  </div>
  <div>
    <table>
      <tbody>
        <tr>
          <th>
            Фамилия
          </th>
          <th>
            Имя
          </th>
          <th>
            Отчество
          </th>
          <th>
            Баланс
          </th>
          <th>
            Статус
          </th>
          <th>
            Редактировать
          </th>
          <th>
            Удалить
          </th>
        </tr>
        <tr>
          <td>
            Иванов
          </td>
          <td>
            Иван
          </td>
          <td>
            Иванович
          </td>
          <td>
            200
          </td>
          <td
            style={
              Object {
                "backgroundColor": "green",
              }
            }
          >
            active
          </td>
          <td>
            <input
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td>
            <input
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
        <tr>
          <td>
            Сидоров
          </td>
          <td>
            Сидор
          </td>
          <td>
            Сидорович
          </td>
          <td>
            250
          </td>
          <td
            style={
              Object {
                "backgroundColor": "green",
              }
            }
          >
            active
          </td>
          <td>
            <input
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td>
            <input
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
        <tr>
          <td>
            Петров
          </td>
          <td>
            Петр
          </td>
          <td>
            Петрович
          </td>
          <td>
            180
          </td>
          <td
            style={
              Object {
                "backgroundColor": "green",
              }
            }
          >
            active
          </td>
          <td>
            <input
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td>
            <input
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <input
    onClick={[Function]}
    type="button"
    value="Добавить"
  />
  <div />
</div>
`;

exports[`company 4`] = `
<div>
  <div>
    <input
      onClick={[Function]}
      type="button"
      value="Velcom"
    />
    <input
      onClick={[Function]}
      type="button"
      value="MTC"
    />
    <h2>
      Компания: 
      Velcom
    </h2>
  </div>
  <div
    className="filter"
  >
    <input
      onClick={[Function]}
      type="button"
      value="Все"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Активные"
    />
    <input
      onClick={[Function]}
      type="button"
      value="Заблокированные"
    />
  </div>
  <div>
    <table>
      <tbody>
        <tr>
          <th>
            Фамилия
          </th>
          <th>
            Имя
          </th>
          <th>
            Отчество
          </th>
          <th>
            Баланс
          </th>
          <th>
            Статус
          </th>
          <th>
            Редактировать
          </th>
          <th>
            Удалить
          </th>
        </tr>
        <tr>
          <td>
            Григорьев
          </td>
          <td>
            Григорий
          </td>
          <td>
            Григорьевич
          </td>
          <td>
            -220
          </td>
          <td
            style={
              Object {
                "backgroundColor": "red",
              }
            }
          >
            blocked
          </td>
          <td>
            <input
              onClick={[Function]}
              type="button"
              value="Редактировать"
            />
          </td>
          <td>
            <input
              onClick={[Function]}
              type="button"
              value="Удалить"
            />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <input
    onClick={[Function]}
    type="button"
    value="Добавить"
  />
  <div />
</div>
`;
